--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "swiper": "^8.4.4",
+    "vue": "^3.2.41",
+    "vue3-carousel": "^0.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
